minor updates, and a new test

--- a/README
+++ b/README
@@ -1,9 +1,23 @@
+#cltool
+
 Example command line tool install using easy_install/pip/etc
 
 This builds a tiny egg that installs two command line tools, 'cltool' and 'cltool2'. cltool is a command line tool that uses raw bash, cltool2 is a python script that can be run as a command line tool.
 
 This project was written to teach myself how to do this, and due to the dearth of good tutorials. 
 
-See Also: 
+## Installing cltool 
+To install cltool,  you can simply run 
+    pip install cltool
+Once that is done, cltool package will be installed, and the commands *cltool*, *cltool2* and *cltool3* will be avaliable from your command line. If you want to see exactly which cltool or cltool2 was installed, you can simply run 
+    which cltool
+to see where on your system python deposits it's scripts linkage.
+
+# Some of the Nifty Stuff
+
+
+
+
+##See Also: 
 - http://parijatmishra.wordpress.com/2008/10/13/python-packaging-custom-scripts/
 - http://peak.telecommunity.com/DevCenter/setuptools#non-package-data-files
